--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ span{
 /**Hero section**/
 
 .herosection{
-    background-image: url("hero_image.jpg");
+    background-image: url("hero_image (1).jpg");
     background-size: cover;
     height: 450px;
     display: flex;
